# cluck

./: Cargo.toml  Justfile
examples/: timer.rs  timer_cluck.toml
src/: args.rs  cluckfile.rs  group.rs  main.rs  watch.rs
tests/: echo.rs
