[package]
name = "cluck"
description = "A simple runner for development environments."
authors = ["Andrew Rademacher"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AndrewRademacher/cluck"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
async-trait = "0.1.72"
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.181", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
chrono = "0.4.26"
regex = "1.9.1"
subprocess = "0.2.9"
